k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trifid
spec:
  template:
    spec:
      securityContext:
        runAsUser: 65534
        runAsGroup: 65534
      containers:
        - name: trifid
          image: docker.io/zazuko/data-admin-ch
          imagePullPolicy: Always

          ports:
            - name: http
              containerPort: 8080
              protocol: TCP

          livenessProbe:
            httpGet:
              path: /health
              port: http
          readinessProbe:
            httpGet:
              path: /health
              port: http
