k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trifid
  annotations:
    external-dns.alpha.kubernetes.io/hostname: classifications-data-admin-ch.zazuko.net
spec:
  rules:
    - host: classifications.data.admin.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trifid
                port:
                  number: 80
